# pixi_template_project

./: .pre-commit-config.yaml  README.md  copier.yaml  pixi.toml  pyproject.toml
.github/workflows/: ci.yaml
template/: .pre-commit-config.yaml  pixi.toml.jinja  pyproject.toml.jinja
template/tests/: test_base.py.jinja
template/{{ project_package_name_snake_case }}/: __init__.py
