[build-system]
requires = [
  'setuptools',
  'setuptools-scm'
]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "pixi_template_project"
description = ""
authors = [{ name = "Manuel Weid", email = "-.-@-.de" }]
dynamic = ["version"]
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[project.urls]
repository = "https://github.com/mweidwork/pixi-template-project"

[tool.setuptools.packages.find]
include = ["pixi_template_project"]

[project.scripts]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = '3.9'
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]